--- a/lecture10.Rmd
+++ b/lecture10.Rmd
@@ -997,7 +997,7 @@ lines(xx, gausdens(xx), col = "red", lwd = 2)
 
 We assume $\sigma_1$ and $\sigma_2$ known.
 
-```{r gaus-mix-loglik}
+```{r gaus-mix-loglik, cache = TRUE}
 loglik <- function(par, x) {
   p <- par[1]
 
